test/ddc-spec/error/01-ErrorExp/23-PrivateNotRegion/Test.ds


module Test where

-- NOTE: We also have a ErrorLetRegionsNotRegion message,
-- but the concrete grammar doesn't provide any way to exercise it.

-- ISSUE #409: No source locations for kind mismatch errors.
--
foo {@a: Data} ()
 = extend a using r in ()
